--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,11 @@ html{
 }
 
 .transl{
-    transform: translate(0, 5rem);
+    transform: translate(0, 2rem);
+}
+
+.mrgTop-2{
+    margin-top: 2rem;
 }
 
 
@@ -58,6 +62,7 @@ header{
     z-index: 50;
 
     width: 100%;
+    min-width: 1100px;
 
     background-color: white;
 }
@@ -127,7 +132,6 @@ header .logo{
 
     margin-top: 4rem;
     
-    height: 40rem;
 }
 
 .hero h1{
@@ -145,23 +149,41 @@ header .logo{
     line-height: 1.5rem;
 
     padding-right: 4rem;
+
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     
 }
 
-.hero p{
+.hero .info p{
     font-weight: 500;
 }
 
-.hero a{
-    margin-top: 2rem;
+
+.hero .info div{
+    margin-top: .5rem;
+
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+.hero .info a.down{
+
+    display: inline-block;
+
+    margin-bottom: 2rem;
+
+    text-decoration: none;
+
+    font-size: 2rem;
+
+    color: black;
 }
 
 .hero img{
-    max-width: 65%;
-
-    float: left;
-
     max-height: 28rem;
+
+    position: absolute;
 }
 
 .hero .rel{
