--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ html{
 /* utility */
 
 .container{
+    max-width: 1300px;
+
     margin: 0 auto;
 
     padding-left: 1rem;
@@ -50,6 +52,7 @@ html{
 .mrgTop-2{
     margin-top: 2rem;
 }
+
 
 
 
@@ -124,11 +127,12 @@ header .logo{
 
 .hero {
     background-color: #b4d0e7;
+
+    margin-bottom: 8rem;
 }
 
 
 .hero .container{
-    max-width: 1300px;
 
     margin-top: 4rem;
     
@@ -188,4 +192,15 @@ header .logo{
 
 .hero .rel{
     margin-top: 2rem;
+}
+
+
+section.container{
+    padding: 0 7rem;
+}
+
+section h2{
+    font-size: 3rem;
+
+    font-weight: 00;
 }
