--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,10 @@ html{
     padding-top: 4rem;
 }
 
+.pad-data{
+    padding: 2rem 1rem;
+}
+
 .rel{
     position: relative;
 }
@@ -64,6 +68,10 @@ html{
 
 .radio.Sel{
     border: 4px solid blue;
+}
+
+.txt-left{
+    text-align: left;
 }
 
 
@@ -234,6 +242,7 @@ section h2{
 
     border-bottom: 1px solid lightgrey;
 
+    font-size: 1.2rem; 
     line-height: 2rem;
     vertical-align: middle;
 }
@@ -244,4 +253,29 @@ section h2{
     text-align: center;
 
     
+}
+
+.table{
+    width: calc((100% - 4rem) / 3);
+    margin-right: 2rem;
+}
+
+.table>*+*{
+    margin-top: .5rem;
+}
+
+.pad-data h3{
+    font-size: 1.8rem;
+    font-weight: 600;
+}
+
+.pad-data h4{
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+.pad-data h5{
+    font-size: .9rem;
+    
+    color:grey;
 }
