--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,8 @@ header .logo{
     padding: .5em 1em;
 
     text-decoration: none;
+
+    text-align: center;
 }
 
 .hero {
@@ -242,6 +244,11 @@ section h2{
     margin-right: 2rem;
 }
 
+
+#section1{
+    margin-right: -2rem;
+}
+
 #section1 div.left .profile{
     display: inline-block;
     width: 100%;
@@ -262,7 +269,7 @@ section h2{
 }
 
 .subscription>* + *{
-    margin-top: 2.5rem;
+    margin-top: 3rem;
 }
 
 .heading>*+*{
@@ -270,7 +277,8 @@ section h2{
 }
 
 .table{
-    width: calc((100% - 4rem) / 3);
+    max-width: calc((100% / 3) - 4rem);
+    min-width: 170px;
     margin-right: 2rem;
 }
 
@@ -312,7 +320,7 @@ section h2{
 
 .subscription li img{
     max-width: 1rem;
-    height: 1em;
+    height: 1rem;
 
     vertical-align: top;
     margin-right: .2em;
@@ -320,5 +328,14 @@ section h2{
 
 .subscription li .inblock{
     max-width: calc(100% - 1.4rem);
-    line-height: 1;
+}
+
+.subscription .bluBtn{
+    width: 100%;
+}
+
+.subscription>.inblock{
+    padding-bottom: 2rem;
+
+    border-bottom: 1px solid grey;
 }
