--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,26 @@ html{
     max-width: calc(100% / 3);
 }
 
+#section4{
+    font-size: 0;
+}
+.sqr{
+
+    display: inline-block;
+    width: calc(100% / 2);
+    height: calc(100vw / 6);
+
+    background-color: red;
+}
+
+.bigSqr{
+
+    display: inline-block;
+
+    width:calc(100% / 3);
+    height: calc(100vw / 3);
+}
+
 .wid100{
     max-width: 100%;
 }
