--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,10 @@ html{
     padding-right: 1rem;
 }
 
+.center{
+    text-align: center;
+}
+
 .clearfix::after{
     content: "";
     display: table;
@@ -117,18 +121,25 @@ html{
 .sqr{
 
     display: inline-block;
-    width: calc(100% / 2);
-    height: calc(100vw / 6);
+    height: 50%;
+    width: 50%;
 
-    background-color: red;
+    padding: 2rem;
 }
 
 .bigSqr{
+    width: 30%;
+    height: 30vw;
+}
 
-    display: inline-block;
+#section4 .Sqr-text{
+    width: calc(100% - 60%);
+    height: calc(100vw - 70vw);
 
-    width:calc(100% / 3);
-    height: calc(100vw / 3);
+    overflow-y: scroll;
+
+    padding-top: 3rem;
+    padding-left: 2rem;
 }
 
 .wid100{
@@ -498,4 +509,112 @@ section h2{
     border-bottom: 1px solid black;
 
     font-size: 1rem;
+}
+
+footer{
+    padding-top: 8rem;
+    background-color: black;
+}
+
+footer ul{
+    width: calc(100% / 5);
+
+    color: white;
+}
+footer li{
+    list-style: none;
+
+    font-size: 1rem;
+
+    line-height: 1.5;
+
+    padding-right: 1rem;
+}
+
+footer ul h3{
+    font-size: 1.5rem;
+
+    margin-bottom: 1rem;
+}
+
+footer span{
+
+    margin-top: 8rem;
+    display: inline-block;
+
+    padding: 2rem 0;
+
+    color: white;
+
+    font-size: 1rem;
+
+    padding-right: 2rem;
+
+    border-top: 1px solid white;
+}
+
+footer span .fa-sort-up{
+    vertical-align: -5px;
+}
+
+
+#section4 .sqr img{
+
+    width: 100%;
+    height: 100%;
+
+    filter:invert(1);
+}
+
+
+.green{
+    background-color: #a2d39b;
+}
+
+.bordeaux{
+    background-color: #61082b;
+}
+
+.lightblue{
+    background-color: #0093ce;
+}
+
+.red{
+    background-color: #ff1c1c;
+}
+
+.fullred{
+    background-color: #d5001f;
+}
+
+.azure{
+    background-color: #b4d0e7;
+}
+
+.blu{
+    background-color: #0d2481;
+}
+
+.yellow{
+    background-color: #ffd830;
+}
+
+.dirt{
+    background-color: #f5f5f5;
+}
+
+.Sqr-text{
+    font-size: 1rem;
+
+    scroll-margin-right: hidden;
+}
+.Sqr-text img{
+    height: 3rem;
+}
+
+.Sqr-text hr{
+
+    width: 3rem;
+
+    color: black;
 }
