--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,8 @@ html{
     width: 50%;
 
     padding: 2rem;
+
+    border: .5rem solid;
 }
 
 .bigSqr{
@@ -221,6 +223,8 @@ header nav{
 
 header ul{
     width: 50%;
+
+    min-width: 600px;
 
     font-size: 1rem;
     font-weight: 500;
@@ -603,38 +607,47 @@ footer span .fa-sort-up{
 
 .green{
     background-color: #a2d39b;
+    border-color: lightgreen;
 }
 
 .bordeaux{
     background-color: #61082b;
+    border-color: #61082b;
 }
 
 .lightblue{
     background-color: #0093ce;
+    border-color: #0093ce;
 }
 
 .red{
     background-color: #ff1c1c;
+    border-color: #ff1c1c;
 }
 
 .fullred{
     background-color: #d5001f;
+    border-color: #d5001f;
 }
 
 .azure{
     background-color: #b4d0e7;
+    border-color: #b4d0e7;
 }
 
 .blu{
     background-color: #0d2481;
+    border-color: #0d2481;
 }
 
 .yellow{
     background-color: #ffd830;
+    border-color: #ffd830;
 }
 
 .dirt{
     background-color: #f5f5f5;
+    border-color: #f5f5f5;
 }
 
 .Sqr-text{
