problema altezze quadrati

--- a/revisione css/css/style.css
+++ b/revisione css/css/style.css
@@ -126,23 +126,26 @@ html{
 .sqr{
 
     display: inline-block;
-    height: 50%;
+    
     width: 50%;
+    height: 50%;
 
-    padding: 2rem;
+    /* padding: 2rem; */
 
     border: .5rem solid;
+
+    margin: 0;
+    
 }
 
 .bigSqr{
-    width: 30%;
-    height: 30vw;
+
+    display: inline-block;
+    width: calc(100% / 3);
+    height: calc(100% / 3);
 }
 
 #section4 .Sqr-text{
-    width: calc(100% - 60%);
-    height: calc(100vw - 70vw);
-
     overflow-y: scroll;
 
     padding-top: 3rem;
@@ -402,7 +405,7 @@ main.hero {
     margin-top: 2rem;
 }
 
-section.container{
+.middleCont{
     padding: 0 7rem;
 }
 
