--- a/revisione css/css/style.css
+++ b/revisione css/css/style.css
@@ -130,7 +130,7 @@ html{
     width: 50%;
     height: 50%;
 
-    /* padding: 2rem; */
+    padding: 2rem;
 
     border: .5rem solid;
 
@@ -141,8 +141,12 @@ html{
 .bigSqr{
 
     display: inline-block;
-    width: calc(100% / 3);
-    height: calc(100% / 3);
+    width: 30%;
+    height: calc(1300px * .3);
+}
+
+.txt-Sqr{
+    width: 40%;
 }
 
 #section4 .Sqr-text{
@@ -674,7 +678,7 @@ footer span .fa-sort-up{
 
 .dirt{
     background-color: #f5f5f5;
-    border-color: #f5f5f5;
+    /* border-color: #f5f5f5; */
 }
 
 .Sqr-text{
