--- a/revisione css/css/style.css
+++ b/revisione css/css/style.css
@@ -16,7 +16,7 @@ html{
 /* utility */
 
 .container{
-    max-width: 1300px;
+    max-width: 1920px;
 
     margin: 0 auto;
 /* 
@@ -110,10 +110,10 @@ html{
     margin-right: -2rem;
 }
 
-.middleCont{
+/* .middleCont{
     padding-left: 7rem;
     padding-right: 7rem;
-}
+} */
 
 .wid33{
     max-width: calc(100% / 3);
@@ -142,11 +142,18 @@ html{
 
     display: inline-block;
     width: 30%;
-    height: calc(1300px * .3);
+    height: calc(1920px * .3);
+
+    max-height: 30vw;
 }
 
 .txt-Sqr{
     width: 40%;
+    height: calc(1920px * .3);
+
+    max-height: 30vw;
+
+    padding: 2rem;
 }
 
 #section4 .Sqr-text{
@@ -629,8 +636,13 @@ footer span .fa-sort-up{
 
 #section4 .sqr img{
 
+    /* width: 100%; */
     width: 100%;
     height: 100%;
+    /* height: calc(((1300px / 3) / 2) - 4rem);
+    
+    margin-top: -1rem; */
+
 
     filter:invert(1);
 }
@@ -681,12 +693,12 @@ footer span .fa-sort-up{
     /* border-color: #f5f5f5; */
 }
 
-.Sqr-text{
+.txt-Sqr{
     font-size: 1rem;
 
     scroll-margin-right: hidden;
 }
-.Sqr-text img{
+.txt-Sqr img{
     height: 3rem;
 }
 
