--- a/revisione css/css/style.css
+++ b/revisione css/css/style.css
@@ -14,6 +14,17 @@ html{
 }
 
 /* utility */
+.min-485{
+    min-width: 485px;
+}
+
+.min-300{
+    min-width: 300px;
+}
+
+.min-200{
+    min-width: 200px;
+}
 
 .container{
     max-width: 1920px;
@@ -119,10 +130,6 @@ html{
     max-width: calc(100% / 3);
 }
 
-#section4{
-    font-size: 0;
-}
-
 .sqr{
 
     display: inline-block;
@@ -156,12 +163,7 @@ html{
     padding: 2rem;
 }
 
-#section4 .Sqr-text{
-    overflow-y: scroll;
 
-    padding-top: 3rem;
-    padding-left: 2rem;
-}
 
 .wid100{
     max-width: 100%;
@@ -200,7 +202,7 @@ section .mrg-neg>*+*{
     margin-top: 2rem;
 }
 
-#section3 .wid33{
+.wid33{
     margin-top: 4rem;
 }
 
@@ -211,9 +213,6 @@ section .mrg-neg>*+*{
     margin-top: 8rem;
 }
 
-#section5{
-    background-color: #b4d0e7;
-}
 
 #section5, #section6{
 
@@ -416,6 +415,114 @@ main.hero {
     margin-top: 2rem;
 }
 
+#section1 div.left .profile{
+    display: inline-block;
+    width: 100%;
+
+    border-bottom: 1px solid lightgrey;
+
+    font-size: 1.2rem; 
+    line-height: 2rem;
+    vertical-align: middle;
+}
+
+#section1 div.left{
+    border: 1px solid lightgrey;
+
+    text-align: center;
+    
+}
+
+#section2 div.partner{
+    padding: 2rem 1rem 0 2rem;
+}
+
+#section2 div p{
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+
+#section2 div .bluBtn{
+    background-color: white;
+
+    border: 1px solid black;
+
+    color: black;
+}
+
+#section4{
+    font-size: 0;
+}
+
+#section4 .middleCont h2{
+    width: 70%
+}
+
+#section4 a{
+    display: inline-block;
+    font-size: 1rem;
+
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+#section4 .sqr img{
+
+    /* width: 100%; */
+    width: 100%;
+    height: 100%;
+    /* height: calc(((1300px / 3) / 2) - 4rem);
+    
+    margin-top: -1rem; */
+
+
+    filter:invert(1);
+}
+
+#section4 .Sqr-text{
+    overflow-y: scroll;
+
+    padding-top: 3rem;
+    padding-left: 2rem;
+}
+
+
+#section5{
+    background-color: #b4d0e7;
+}
+
+#section5 h2{
+    max-width: 50%;
+}
+
+#section5 .bluBtn{
+    font-size: 1.5rem;
+}
+
+#section6 li{
+    width: 100%;
+    list-style: none;
+
+    padding:2rem 0;
+
+    border-bottom: 1px solid black;
+
+    font-size: 1rem;
+}
+
+#section6 li p{
+    display: none;
+}
+#section6 li:hover p{
+
+    display: block;
+}
+
+
+
+
+
+
 .middleCont{
     padding: 0 7rem;
 }
@@ -437,28 +544,9 @@ section h2{
 }
 
 
-#section1 div.left .profile{
-    display: inline-block;
-    width: 100%;
-
-    border-bottom: 1px solid lightgrey;
-
-    font-size: 1.2rem; 
-    line-height: 2rem;
-    vertical-align: middle;
-}
-
-#section1 div.left{
-    border: 1px solid lightgrey;
-
-    text-align: center;
-    
-}
-
-
 .table{
     max-width: calc((100% / 3) - 2rem);
-    min-width: 170px;
+    /* min-width: 170px; */
 
     margin-right: 2rem;
 
@@ -543,49 +631,8 @@ section h2{
 }
 
 
-#section2 div.partner{
-    padding: 2rem 1rem 0 2rem;
-}
 
-#section2 div p{
-    font-size: 1.2rem;
-    font-weight: 500;
-}
 
-#section2 div .bluBtn{
-    background-color: white;
-
-    border: 1px solid black;
-
-    color: black;
-}
-
-#section4 .middleCont h2{
-    width: 70%
-}
-
-#section4 a{
-    display: inline-block;
-    font-size: 1rem;
-
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-}
-
-#section5 h2{
-    max-width: 50%;
-}
-
-#section6 li{
-    width: 100%;
-    list-style: none;
-
-    padding:2rem 0;
-
-    border-bottom: 1px solid black;
-
-    font-size: 1rem;
-}
 
 footer{
     padding-top: 8rem;
@@ -634,18 +681,6 @@ footer span .fa-sort-up{
 }
 
 
-#section4 .sqr img{
-
-    /* width: 100%; */
-    width: 100%;
-    height: 100%;
-    /* height: calc(((1300px / 3) / 2) - 4rem);
-    
-    margin-top: -1rem; */
-
-
-    filter:invert(1);
-}
 
 
 .green{
@@ -696,28 +731,21 @@ footer span .fa-sort-up{
 .txt-Sqr{
     font-size: 1rem;
 
-    scroll-margin-right: hidden;
+    overflow-y: scroll;
 }
 .txt-Sqr img{
     height: 3rem;
 }
 
-.Sqr-text hr{
+.txt-Sqr hr{
 
+    height: 1px;
     width: 3rem;
 
-    color: black;
-}
-
-#section6 li p{
-    display: none;
-}
-#section6 li:hover p{
-
-    display: block;
+    color: lightgrey;
+    background-color: lightgrey;
 }
 
 
-#section5 .bluBtn{
-    font-size: 1.5rem;
-}
+
+
