--- a/revisione css/css/style.css
+++ b/revisione css/css/style.css
@@ -13,6 +13,10 @@ html{
     scroll-behavior: smooth;
 }
 
+
+
+
+
 /* utility */
 .min-485{
     min-width: 485px;
@@ -26,13 +30,14 @@ html{
     min-width: 200px;
 }
 
+.min-600{
+    min-width: 600px;
+}
+
 .container{
     max-width: 1920px;
 
     margin: 0 auto;
-/* 
-    padding-left: 1rem;
-    padding-right: 1rem; */
 }
 
 .minPad{
@@ -40,8 +45,8 @@ html{
     padding-right: 1rem;
 }
 
-.center{
-    text-align: center;
+.middleCont{
+    padding: 0 7rem;
 }
 
 .clearfix::after{
@@ -58,11 +63,6 @@ html{
     float: right;
 }
 
-.middle{
-    margin: 2rem 2rem;
-
-    float: left;
-}
 
 .pTop{
     padding-top: 4rem;
@@ -76,9 +76,6 @@ html{
     padding: 2rem 1rem;
 }
 
-.rel{
-    position: relative;
-}
 
 .transl{
     transform: translate(0, 2rem);
@@ -86,27 +83,6 @@ html{
 
 .mrgTop-2{
     margin-top: 2rem;
-}
-
-.mrgTop-4{
-    margin-top: 4rem;
-}
-
-.mrgTop-8{
-    margin-top: 8rem;
-}
-
-.radio{
-    border: 1px solid lightgrey;
-    border-radius: 50%;
-    height: 16px;
-    width: 16px;
-
-    margin-right: .5rem;
-}
-
-.radio.Sel{
-    border: 4px solid blue;
 }
 
 .txt-left{
@@ -121,49 +97,11 @@ html{
     margin-right: -2rem;
 }
 
-/* .middleCont{
-    padding-left: 7rem;
-    padding-right: 7rem;
-} */
-
 .wid33{
     max-width: calc(100% / 3);
+
+    margin-top: 4rem;
 }
-
-.sqr{
-
-    display: inline-block;
-    
-    width: 50%;
-    height: 50%;
-
-    padding: 2rem;
-
-    border: .5rem solid;
-
-    margin: 0;
-    
-}
-
-.bigSqr{
-
-    display: inline-block;
-    width: 30%;
-    height: calc(1920px * .3);
-
-    max-height: 30vw;
-}
-
-.txt-Sqr{
-    width: 40%;
-    height: calc(1920px * .3);
-
-    max-height: 30vw;
-
-    padding: 2rem;
-}
-
-
 
 .wid100{
     max-width: 100%;
@@ -180,6 +118,8 @@ html{
     
     border-bottom: 1px solid grey;
 }
+
+
 /* margins */
 
 section .mrg-neg>*+*{
@@ -202,12 +142,15 @@ section .mrg-neg>*+*{
     margin-top: 2rem;
 }
 
-.wid33{
-    margin-top: 4rem;
-}
-
 
 /* struct */
+
+section h2{
+    font-size: 3rem;
+
+    font-weight: 600;
+}
+
 
 #section1, #section2, #section3, #section4{
     margin-top: 8rem;
@@ -247,9 +190,6 @@ header ul{
     
 }
 
-.min-600{
-    min-width: 600px;
-}
 nav > ul:last-child{
     text-align: right;
 }
@@ -290,36 +230,14 @@ header li:hover ul{
 
     background: white;
 }
-/* .hidden{
-    display:inline-block;
-    padding: 1em 1em;
 
-    color: black;
-
-    background-color: lightgrey;
-
-    position: absolute;
-    z-index: 50;
-
-    display: none;
-} */
 
 header a:hover{
     border-bottom-color: blue;
 }
 
-/* header a:hover .hidden, header a ul:hover .hidden{
-    display: inline-block;
-} */
-
-
-
 header .logo{
     vertical-align: -7px;
-}
-
-.right li{
-    text-align: right;
 }
 
 .bluBtn{
@@ -343,6 +261,10 @@ header .logo{
 
     border-bottom-color: white;
 }
+
+
+
+
 
 main.hero {
 
@@ -415,6 +337,10 @@ main.hero {
     margin-top: 2rem;
 }
 
+
+
+
+
 #section1 div.left .profile{
     display: inline-block;
     width: 100%;
@@ -433,106 +359,6 @@ main.hero {
     
 }
 
-#section2 div.partner{
-    padding: 2rem 1rem 0 2rem;
-}
-
-#section2 div p{
-    font-size: 1.2rem;
-    font-weight: 500;
-}
-
-#section2 div .bluBtn{
-    background-color: white;
-
-    border: 1px solid black;
-
-    color: black;
-}
-
-#section4{
-    font-size: 0;
-}
-
-#section4 .middleCont h2{
-    width: 70%
-}
-
-#section4 a{
-    display: inline-block;
-    font-size: 1rem;
-
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-}
-
-#section4 .sqr img{
-
-    /* width: 100%; */
-    width: 100%;
-    height: 100%;
-    /* height: calc(((1300px / 3) / 2) - 4rem);
-    
-    margin-top: -1rem; */
-
-
-    filter:invert(1);
-}
-
-#section4 .Sqr-text{
-    overflow-y: scroll;
-
-    padding-top: 3rem;
-    padding-left: 2rem;
-}
-
-
-#section5{
-    background-color: #b4d0e7;
-}
-
-#section5 h2{
-    max-width: 50%;
-}
-
-#section5 .bluBtn{
-    font-size: 1.5rem;
-}
-
-#section6 li{
-    width: 100%;
-    list-style: none;
-
-    padding:2rem 0;
-
-    border-bottom: 1px solid black;
-
-    font-size: 1rem;
-}
-
-#section6 li p{
-    display: none;
-}
-#section6 li:hover p{
-
-    display: block;
-}
-
-
-
-
-
-
-.middleCont{
-    padding: 0 7rem;
-}
-
-section h2{
-    font-size: 3rem;
-
-    font-weight: 600;
-}
-
 .selection div{
     display: inline-block;
     vertical-align: bottom;
@@ -543,10 +369,21 @@ section h2{
     margin-right: 2rem;
 }
 
+.radio{
+    border: 1px solid lightgrey;
+    border-radius: 50%;
+    height: 16px;
+    width: 16px;
+
+    margin-right: .5rem;
+}
+
+.radio.Sel{
+    border: 4px solid blue;
+}
 
 .table{
     max-width: calc((100% / 3) - 2rem);
-    /* min-width: 170px; */
 
     margin-right: 2rem;
 
@@ -604,16 +441,13 @@ section h2{
 
 .bigTable{
     width: calc(100% - 2rem);
+    position: relative;
 }
 
 .bigTable .left{
     margin-top: 2rem;
 
     max-width:calc(70%);
-}
-
-.enterInfo{
-    text-align: left;
 }
 
 .bigTable .bluBtn{
@@ -626,6 +460,32 @@ section h2{
     right: 2rem;
 }
 
+.enterInfo{
+    text-align: left;
+}
+
+
+
+
+
+
+#section2 div.partner{
+    padding: 2rem 1rem 0 2rem;
+}
+
+#section2 div p{
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+
+#section2 div .bluBtn{
+    background-color: white;
+
+    border: 1px solid black;
+
+    color: black;
+}
+
 .partner{
     max-width: 50%;
 }
@@ -634,54 +494,75 @@ section h2{
 
 
 
-footer{
-    padding-top: 8rem;
-    background-color: black;
+#section4{
+    font-size: 0;
 }
 
-footer ul{
-    width: calc(100% / 5);
-
-    color: white;
-}
-footer li{
-    list-style: none;
-
-    font-size: 1rem;
-
-    line-height: 1.5;
-
-    padding-right: 1rem;
+#section4 .middleCont h2{
+    width: 70%
 }
 
-footer ul h3{
-    font-size: 1.5rem;
-
-    margin-bottom: 1rem;
-}
-
-footer span{
-
-    margin-top: 8rem;
+#section4 a{
     display: inline-block;
-
-    padding: 2rem 0;
-
-    color: white;
-
     font-size: 1rem;
 
-    padding-right: 2rem;
-
-    border-top: 1px solid white;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
-footer span .fa-sort-up{
-    vertical-align: -5px;
+#section4 .sqr img{
+
+    width: 100%;
+    height: 100%;
+    
+    filter:invert(1);
 }
 
+#section4 .Sqr-text{
+    overflow-y: scroll;
 
+    padding-top: 3rem;
+    padding-left: 2rem;
+}
 
+.sqr{
+
+    display: inline-block;
+    
+    width: 50%;
+    height: 50%;
+
+    padding: 2rem;
+
+    border: .5rem solid;
+
+    margin: 0;
+    
+}
+
+.bigSqr{
+
+    display: inline-block;
+    width: 30%;
+    min-width: 350px;
+
+    height: calc(1920px * .3);
+    min-height: 350px;
+
+    max-height: 30vw;
+}
+
+.txt-Sqr{
+    width: 40%;
+    min-width: 350px;
+
+    height: calc(1920px * .3);
+    min-height: 350px;
+
+    max-height: 30vw;
+
+    padding: 2rem;
+}
 
 .green{
     background-color: #a2d39b;
@@ -744,6 +625,96 @@ footer span .fa-sort-up{
 
     color: lightgrey;
     background-color: lightgrey;
+}
+
+
+
+
+
+#section5{
+    background-color: #b4d0e7;
+}
+
+#section5 h2{
+    max-width: 50%;
+}
+
+#section5 .bluBtn{
+    font-size: 1.5rem;
+}
+
+
+
+
+
+#section6 li{
+    width: 100%;
+    list-style: none;
+
+    padding:2rem 0;
+
+    border-bottom: 1px solid black;
+
+    font-size: 1rem;
+}
+
+#section6 li p{
+    display: none;
+}
+#section6 li:hover p{
+
+    display: block;
+}
+
+
+
+
+
+
+footer{
+    padding-top: 8rem;
+    background-color: black;
+}
+
+footer ul{
+    width: calc(100% / 5);
+
+    color: white;
+}
+footer li{
+    list-style: none;
+
+    font-size: 1rem;
+
+    line-height: 1.5;
+
+    padding-right: 1rem;
+}
+
+footer ul h3{
+    font-size: 1.5rem;
+
+    margin-bottom: 1rem;
+}
+
+footer span{
+
+    margin-top: 8rem;
+    display: inline-block;
+
+    padding: 2rem 0;
+
+    color: white;
+
+    font-size: 1rem;
+
+    padding-right: 2rem;
+
+    border-top: 1px solid white;
+}
+
+footer span .fa-sort-up{
+    vertical-align: -5px;
 }
 
 
